--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: ErikFco
 github_username:  erikfilias
 
 # Build settings
-theme: minima
+theme: minimal
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
