--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ twitter_username: ErikFco
 github_username:  erikfilias
 
 # Build settings
-theme: minima
+# theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
