--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Erik F. Alvarez
 email: erikfilias@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Researcher in Power System Optimization
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ErikFco
