--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ twitter_username: ErikFco
 github_username:  erikfilias
 
 # Build settings
-theme: minima
-# theme: minimal-mistakes-jekyll
+# theme: minima
+remote_theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
