--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  erikfilias
 
 # Build settings
 # theme: minima
-remote_theme: minimal-mistakes-jekyll
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
