--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  erikfilias
 
 # Build settings
 # theme: minima
-theme: minimal
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
