--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,9 @@
 title: Erik F. Alvarez
 email: erikfilias@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Researcher in Power System Optimization
+PhD student in Power System Optimization
+My research focuses on developing mathematical models applied to power system planning, identifying future genration mix and making strategic plans to deliver energy to the final consumers. 
+I also moonlight as a sometime package developer.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ErikFco
